--- a/credits/styless.css
+++ b/credits/styless.css
@@ -11,7 +11,12 @@ h2 {
 p1 {
     color: white;
     font-family: sans-serif;
-    font-size: 7px;
+    font-size: 9px;
+}
+p2 {
+    color: white;
+    font-family: sans-serif;
+    font-size: 9px;
 }
 button {
     background-color: black;
