--- a/pranx/stylessss.css
+++ b/pranx/stylessss.css
@@ -15,3 +15,30 @@ button {
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
+.flstudio {
+    display: none; /* Hide the modal by default */
+    position: fixed; /* Position the modal relative to the viewport */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+    z-index: 1; /* Ensure the modal is above other content */
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: rgb(0, 129, 129);
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    width: 50%; /* Set the width of the modal content */
+    max-width: 400px; /* Set maximum width if needed */
+}
+p {
+    color: white;
+    font-family: sans-serif;
+    font-size: 16px;
+}
