--- a/pranx/stylessss.css
+++ b/pranx/stylessss.css
@@ -42,3 +42,8 @@ p {
     font-family: sans-serif;
     font-size: 16px;
 }
+p1 {
+    color: white;
+    font-family: sans-serif;
+    font-size: 8px;
+}
