Added more credits and two new games: Hangman Challenge and Block Parkour 2

--- a/gameslobby/gamess.css
+++ b/gameslobby/gamess.css
@@ -83,3 +83,31 @@ button {
     height: 100px;
     width: 100px;
 }
+.blockparkourtwo {
+    background-color: rgb(26, 26, 26);
+    padding: 20px;
+    border: 3px black;
+    border-radius: 10px;
+    display: flex; /* Use flexbox layout */
+    flex-direction: column; /* Stack items vertically */
+    align-items: left;
+    margin-top: 30px;
+}
+.blockparkourtwopic {
+    height: 100px;
+    width: 100px;
+}
+.hangmanchallengegame {
+    background-color: rgb(26, 26, 26);
+    padding: 20px;
+    border: 3px black;
+    border-radius: 10px;
+    display: flex; /* Use flexbox layout */
+    flex-direction: column; /* Stack items vertically */
+    align-items: left;
+    margin-top: 30px;
+}
+.hangmanchallengepic {
+    height: 100px;
+    width: 100px;
+}
